k8s/june-dark/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: june-dark
  labels:
    name: june-dark
    app: june-osint
